--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "npx ts-node src/index.ts",
-    "build": "tsc",
-    "clean": "tsc --build --clean",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "start": "ts-node src/index.ts",
+    "pdfTable": "ts-node src/puppeteer/usecases/tables.ts",
+    "pdfImage": "ts-node src/puppeteer/usecases/images.ts"
   },
   "author": "",
   "license": "ISC",
@@ -19,8 +19,10 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@types/puppeteer": "^7.0.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "puppeteer": "^20.5.0"
   }
 }
